# ktp-accounts-kcm

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  INSTALL  README
gabble/: CMakeLists.txt  Messages.sh  advanced-options-widget.cpp  advanced-options-widget.h  gabble-account-ui-plugin.cpp  gabble-account-ui-plugin.h  gabble-account-ui.cpp  gabble-account-ui.h  kcmtelepathyaccounts_plugin_gabble.desktop  main-options-widget-facebook.cpp  main-options-widget-facebook.h  main-options-widget-facebook.ui  main-options-widget-googletalk.cpp  main-options-widget-googletalk.h  main-options-widget-googletalk.ui  main-options-widget.cpp  main-options-widget.h  main-options-widget.ui  mandatory-parameters-widget.cpp  mandatory-parameters-widget.h  mandatory-parameters-widget.ui  proxy-settings-widget.cpp  proxy-settings-widget.h  proxy-settings-widget.ui  server-settings-widget.cpp  server-settings-widget.h  server-settings-widget.ui
haze/: CMakeLists.txt  aim-main-options-widget.cpp  aim-main-options-widget.h  aim-main-options-widget.ui  aim-server-settings-widget.ui  haze-account-ui-plugin.cpp  haze-account-ui-plugin.h  haze-aim-account.cpp  haze-aim-account.h  haze-icq-account-ui.cpp  haze-icq-account-ui.h  haze-icq-account.cpp  haze-icq-account.h  haze-myspaceim-account-ui.h  haze-skype-account-ui.cpp  haze-skype-account-ui.h  haze-yahoo-account.cpp  haze-yahoo-account.h  icq-advanced-options-widget.cpp  icq-advanced-options-widget.h  icq-main-options-widget.cpp  icq-main-options-widget.h  icq-main-options-widget.ui  icq-proxy-settings-widget.cpp  icq-proxy-settings-widget.h  icq-proxy-settings-widget.ui  icq-server-settings-widget.cpp  icq-server-settings-widget.h  icq-server-settings-widget.ui  kcmtelepathyaccounts_plugin_haze.desktop  myspaceim-advanced-settings-widget.h  myspaceim-main-options-widget.cpp  myspaceim-main-options-widget.h  myspaceim-main-options-widget.ui  skype-main-options-widget.cpp  yahoo-main-options-widget.cpp  yahoo-main-options-widget.h  yahoo-main-options-widget.ui  yahoo-server-settings-widget.cpp  yahoo-server-settings-widget.ui
plugins/: CMakeLists.txt
plugins/butterfly/: CMakeLists.txt  Messages.sh  butterfly-account-ui-plugin.cpp  butterfly-account-ui-plugin.h  butterfly-account-ui.cpp  butterfly-account-ui.h  kcmtelepathyaccounts_plugin_butterfly.desktop  ktpaccountskcm_plugin_butterfly.desktop  ktpaccountskcm_plugin_butterfly.desktop.cmake  main-options-widget.cpp  main-options-widget.h
plugins/gabble/: CMakeLists.txt  gabble-account-ui-plugin.cpp  gabble-account-ui-plugin.h  gabble-account-ui.cpp  gabble-account-ui.h  kcmtelepathyaccounts_plugin_gabble.desktop  ktpaccountskcm_plugin_gabble.desktop  ktpaccountskcm_plugin_gabble.desktop.cmake  main-options-widget-facebook.cpp  main-options-widget-facebook.h  main-options-widget-facebook.ui  main-options-widget-googletalk.cpp  main-options-widget-googletalk.h  main-options-widget-googletalk.ui  main-options-widget-kde-talk.cpp  main-options-widget-kde-talk.h  main-options-widget-kde-talk.ui  main-options-widget-msn.cpp  main-options-widget-msn.h  main-options-widget-msn.ui  main-options-widget.cpp  main-options-widget.h  main-options-widget.ui  proxy-settings-widget.cpp  proxy-settings-widget.h  proxy-settings-widget.ui  server-settings-widget.cpp  server-settings-widget.h  server-settings-widget.ui
plugins/haze/: CMakeLists.txt  Messages.sh  aim-main-options-widget.cpp  aim-main-options-widget.h  aim-main-options-widget.ui  aim-server-settings-widget.cpp  aim-server-settings-widget.h  aim-server-settings-widget.ui  groupwise-advanced-settings-widget.cpp  groupwise-advanced-settings-widget.h  groupwise-advanced-settings-widget.ui  groupwise-main-options-widget.cpp  groupwise-main-options-widget.h  groupwise-main-options-widget.ui  haze-account-ui-plugin.cpp  haze-account-ui-plugin.h  haze-aim-account.cpp  haze-aim-account.h  haze-groupwise-account.cpp  haze-groupwise-account.h  haze-icq-account.cpp  haze-icq-account.h  haze-msn-account.cpp  haze-msn-account.h  haze-myspaceim-account-ui.cpp  haze-myspaceim-account-ui.h  haze-sipe-account.cpp  haze-sipe-account.h  haze-skype-account-ui.cpp  haze-skype-account-ui.h  haze-skypeweb-account.cpp  haze-skypeweb-account.h  haze-steam-account.cpp  haze-steam-account.h  haze-yahoo-account.cpp  haze-yahoo-account.h  icq-main-options-widget.cpp  icq-main-options-widget.h  icq-main-options-widget.ui  icq-server-settings-widget.cpp  (+38 more)
plugins/idle/: CMakeLists.txt  advanced-options-widget.cpp  advanced-options-widget.h  advanced-options-widget.ui  idle-account-ui-plugin.cpp  idle-account-ui-plugin.h  idle-account-ui.cpp  idle-account-ui.h  kcmtelepathyaccounts_plugin_idle.desktop  ktpaccountskcm_plugin_idle.desktop  main-options-widget.cpp  (+3 more)
src/: CMakeLists.txt  Messages.sh  account-identity-dialog.cpp  account-identity-dialog.h  account-identity-dialog.ui  account-item.cpp  account-item.h  accounts-list-delegate.cpp  accounts-list-delegate.h  accounts-list-model.cpp  add-account-assistant.cpp  add-account-assistant.h  add-account-wizard.cpp  add-account-wizard.h  avatar-button.cpp  avatar-button.h  change-icon-button.cpp  change-icon-button.h  connection-manager-item.cpp  connection-manager-item.h  dictionary.cpp  edit-account-dialog.cpp  edit-account-dialog.h  edit-display-name-button.cpp  edit-display-name-button.h  fetch-avatar-job.cpp  kcm-telepathy-accounts.cpp  kcm-telepathy-accounts.h  kcm_ktp_accounts.desktop  kcm_telepathy_accounts.desktop  main-widget.ui  parameter-edit-delegate.cpp  parameter-edit-delegate.h  parameter-edit-model.cpp  parameter-edit-model.h  parameter-edit-widget.cpp  parameter-edit-widget.h  parameter-edit-widget.ui  parameter-item.cpp  parameter-item.h  (+19 more)
sunshine/: CMakeLists.txt  Messages.sh  kcmtelepathyaccounts_plugin_sunshine.desktop  sunshine-account-ui-plugin.cpp  sunshine-account-ui.cpp  sunshine-account-ui.h  sunshine-advanced-options-widget.cpp  sunshine-advanced-options-widget.h  sunshine-advanced-options-widget.ui  sunshine-main-options-widget.cpp  sunshine-main-options-widget.h  sunshine-main-options-widget.ui
(+803 files in other folders)
